# ms365-cli

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
src/: auth.rs  graph.rs  main.rs
src/cmd/: mod.rs  read.rs  search.rs
