[package]
name = "ms365"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ms365"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
html2text = "0.12"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
